# wa-Zaakir

./: .gitignore  README.md
duahifz/: .gitignore  PHASE1_COMPLETE.md  README.md  analysis_options.yaml  pubspec.yaml  setup_models.ps1
duahifz/android/: local.properties
duahifz/android/app/: build.gradle  proguard-rules.pro
duahifz/android/app/src/main/: AndroidManifest.xml
duahifz/android/app/src/main/cpp/: CMakeLists.txt  speech_recognition.cpp
duahifz/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
duahifz/android/app/src/main/kotlin/com/duahifz/app/: MainActivity.kt  SpeechRecognitionService.kt
duahifz/assets/duas/: sample_duas.json
duahifz/assets/fonts/: .gitkeep
duahifz/assets/models/: .gitkeep
duahifz/lib/: main.dart
duahifz/lib/models/: dua.dart
duahifz/lib/providers/: recitation_provider.dart
duahifz/lib/screens/: home_screen.dart  recitation_screen.dart
duahifz/lib/services/: audio_recording_service.dart  dua_provider.dart  quran_recognition_service.dart  speech_channel.dart
duahifz/lib/widgets/: arabic_text_display.dart  dua_list_tile.dart  progress_indicator.dart  recitation_controls.dart  recognition_result_card.dart  recording_button.dart
